fixed screen shifting

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css');
+
 html,
 body,
 #root
@@ -15,13 +17,24 @@ canvas
     touch-action: none;
 }
 
-.htmlScreen iframe
+.navBar
+{
+    width: 1024px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    /* background: #bcedf6; */
+    background: red;
+}
+
+.lightScreen
 {
     width: 1024px;
     height: 670px;
     border: none;
     border-radius: 20px;
-    background: #000000;
+    background: #bcedf6;
+    /* position: static; */
 }
 
 .wrapper{
